# pysemql

./: LICENSE  README.md  pyproject.toml
docs/: deepseek_reasoning_log.md  pysemql_specification_draft.md
docs/SPARQL/: sparql_engine_architecture.md
jupyter/: pysemsql_dev.ipynb
src/pysemql/: __init__.py  indent_stack.py  pyql_grammar.py  pyql_transpiler.py  pysemql_grammar.py  pysemql_transpiler.py
