[project]
name = "pysemql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mark doerr", email = "mark.doerr@uni-greifswald.de" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pysemql = "pysemql:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
