[project]
name = "pysemql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mark doerr", email = "mark.doerr@uni-greifswald.de" }
]
requires-python = ">=3.11"
dependencies = [
    "parsimonious>=0.10.0",
    "rdflib>=7.1.3",
    "sparqlwrapper>=2.0.0",
]

[project.scripts]
pysemql = "pysemql:main"

[project.optional-dependencies]
ipython = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bump-my-version>=0.32.2",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
